[project]
name = "connector-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic==1.16.4",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "base58==2.1.1",
    "bcrypt==4.3.0",
    "black==25.1.0",
    "build==1.2.2.post1",
    "cachecontrol==0.14.3",
    "certifi==2025.7.14",
    "cffi==1.17.1",
    "cfgv==3.4.0",
    "charset-normalizer==3.4.2",
    "cleo==2.1.0",
    "click==8.2.1",
    "construct==2.10.68",
    "construct-typing==0.6.2",
    "crashtest==0.4.1",
    "cryptography==45.0.5",
    "distlib==0.3.9",
    "dnspython==2.7.0",
    "dulwich==0.22.8",
    "ecdsa==0.19.1",
    "email-validator==2.2.0",
    "fastapi==0.116.1",
    "fastjsonschema==2.21.1",
    "filelock==3.18.0",
    "findpython==0.6.3",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "identify==2.6.12",
    "idna==3.10",
    "iniconfig==2.1.0",
    "installer==0.7.0",
    "jaraco-classes==3.4.0",
    "jaraco-context==6.0.1",
    "jaraco-functools==4.2.1",
    "jsonalias==0.1.1",
    "keyring==25.6.0",
    "mako==1.3.10",
    "markupsafe==3.0.2",
    "more-itertools==10.7.0",
    "msgpack==1.1.1",
    "mypy-extensions==1.1.0",
    "nodeenv==1.9.1",
    "packaging==25.0",
    "passlib==1.7.4",
    "pathspec==0.12.1",
    "pbs-installer==2025.7.12",
    "pkginfo==1.12.1.2",
    "platformdirs==4.3.8",
    "pluggy==1.6.0",
    "poetry==2.1.3",
    "poetry-core==2.1.3",
    "psycopg2==2.9.10",
    "pyasn1==0.6.1",
    "pycparser==2.22",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.10.1",
    "pygments==2.19.2",
    "pyproject-hooks==1.2.0",
    "pytest==8.4.1",
    "python-dotenv==1.1.1",
    "python-jose==3.5.0",
    "pyyaml==6.0.2",
    "rapidfuzz==3.13.0",
    "requests==2.32.4",
    "requests-toolbelt==1.0.0",
    "rsa==4.9.1",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "solana==0.36.7",
    "solders==0.26.0",
    "sqlalchemy==2.0.41",
    "sqlalchemy-utils==0.41.2",
    "sqlmodel==0.0.24",
    "starlette==0.47.1",
    "tomlkit==0.13.3",
    "trove-classifiers==2025.5.9.12",
    "typing-extensions==4.14.1",
    "typing-inspection==0.4.1",
    "urllib3==2.5.0",
    "uvicorn==0.35.0",
    "virtualenv==20.31.2",
    "websockets==15.0.1",
    "xattr==1.2.0",
    "zstandard==0.23.0",
]


[tool.black]
line-length = 88
target-version = ['py311']  # Or your Python version
skip-string-normalization = false
